# youtube-backend

./: .gitignore  README.md  main.py  pyproject.toml
src/api/v1/: __init__.py  admin.py  auth.py  user.py  video.py
src/core/: config.py
src/db/: session.py
src/models/: base.py  user.py  video.py
src/schemas/: user.py  video.py
src/services/: auth.py  auth_deps.py  file_service.py  security.py  user_service.py  video_service.py
